--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,6 +1,29 @@
 doctype html 
 html
         head
-                title Abhay Arora (@BzFTMxc) - Pluviophile & Geek
+                title Abhay Arora (@BzFTMxc)
+                link(rel="stylesheet", type="text/css", href="assets/css/BzFTMxc.min.css")
         body
-                h1 TBD
+
+                section#head
+                        .container
+                                .row
+                                        .col-md-12
+                                                h1 Abhay Arora
+
+                section#subhead
+                        .container
+                                .row
+                                        .col-md-6
+                                                h3 Developer
+                                        .col-md-6
+                                                h3 Developer
+
+                section#experience
+                        .container
+                                .row
+                                        .col-md-6
+                                                
+                                        .col-md-6
+
+                script(type="text/javascript", src="assets/js/BzFTMxc.min.js")
