--- a/src/less/BzFTMxc.less
+++ b/src/less/BzFTMxc.less
@@ -1,6 +1,15 @@
 html, body{
-      left: 0px;
-      top: 0px;
-      margin: 0px;
-      padding: 0px;
+    left: 0px;
+    top: 0px;
+    margin: 0px;
+    padding: 0px;
+}
+
+.wrapper{
+    float: left;
+    width: 100%;
+}
+
+#whoami{
+    
 }
