--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -2,28 +2,18 @@ doctype html
 html
         head
                 title Abhay Arora (@BzFTMxc)
-                link(rel="stylesheet", type="text/css", href="assets/css/BzFTMxc.min.css")
+                link(rel="stylesheet", type="text/css",
+                href="assets/css/BzFTMxc.min.css")
         body
 
-                section#head
+                section#whoami.wrapper
                         .container
                                 .row
                                         .col-md-12
-                                                h1 Abhay Arora
-
-                section#subhead
-                        .container
-                                .row
-                                        .col-md-6
-                                                h3 Developer
-                                        .col-md-6
-                                                h3 Developer
-
-                section#experience
-                        .container
-                                .row
-                                        .col-md-6
-                                                
-                                        .col-md-6
+                                                p Hello! I am
+                                                h1.name Abhay Arora
+                                                strong.work
+                                                        | I am a software 
+                                                        | developer.
 
                 script(type="text/javascript", src="assets/js/BzFTMxc.min.js")
