Removed Bootstrap grid only

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -2,11 +2,12 @@ doctype html
 html
         head
                 title Abhay Arora (@BzFTMxc)
+                link(rel='stylesheet', type='text/css',
+                src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css')
                 link(rel="stylesheet", type="text/css",
                 href="assets/css/BzFTMxc.min.css")
         body
-
-                section#whoami.wrapper
+                section#whoami
                         .container
                                 .row
                                         .col-md-12
