--- a/src/less/BzFTMxc.less
+++ b/src/less/BzFTMxc.less
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway|Raleway+Dots');
+/**
+ *  font-family: 'Raleway Dots', cursive;
+ *  font-family: 'Raleway', sans-serif;
+ **/
+
 html, body{
-    left: 0px;
-    top: 0px;
-    margin: 0px;
-    padding: 0px;
+    font-family: 'Raleway', sans-serif;
 }
 
 .wrapper{
@@ -11,5 +14,6 @@ html, body{
 }
 
 #whoami{
-    
+    text-align: center;
 }
+
