--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -2,19 +2,19 @@ doctype html
 html
         head
                 title Abhay Arora (@BzFTMxc)
-                link(rel='stylesheet', type='text/css',
-                src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css')
-                link(rel="stylesheet", type="text/css",
-                href="assets/css/BzFTMxc.min.css")
+                link(rel="stylesheet", type="text/css", href="assets/css/BzFTMxc.min.css")
         body
-                section#whoami
-                        .container
-                                .row
-                                        .col-md-12
-                                                p Hello! I am
-                                                h1.name Abhay Arora
-                                                strong.work
-                                                        | I am a software 
-                                                        | developer.
+                
+                .wrapper
+                        .page
+
+                                section#whoami.wrapper
+                                        h1 Some things
+                                
+                                section#timeline.wrapper
+                                        .timeline
+                                                .block.dotted.left A
+                                                .block.dashed.right B
+                                                .block.right C
 
                 script(type="text/javascript", src="assets/js/BzFTMxc.min.js")
