--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -9,12 +9,84 @@ html
                         .page
 
                                 section#whoami.wrapper
-                                        h1 Some things
-                                
+                                        img.portrait(src='assets/img/portrait.jpg')
+                                        .greeting
+                                                h3
+                                                        span.highlight.skew
+                                                                span.unskew Hello!
+                                                        span I am 
+                                                h1 Abhay Arora
+                                        .highlights
+                                                span.highlight.skew
+                                                        span.unskew freelancer
+                                                span.highlight.skew
+                                                        span.unskew software architect
+                                                span.highlight.skew
+                                                        span.unskew data engineer
+
                                 section#timeline.wrapper
                                         .timeline
-                                                .block.dotted.left A
-                                                .block.dashed.right B
-                                                .block.right C
+                                                .block.dashed.short
+                                                        .left
+                                                                .time Today
+                                                        .right I want to join your team.
+                                                .block
+                                                        .left
+                                                                .time Aug '17
+                                                                .content
+                                                                        h3 SpatialWeb (Prototype)
+                                                                        a(target='_blank', href='https://github.com/BzFTMxc/spatial-demo') https://github.com/BzFTMxc/spatial-demo
+                                                                        p Physical network inventory management and network analysis through Google Maps based interface. Developed a prototype to demonstrate how javascript can be used to render and manipulate spatial data directly on map.
+                                                                        ul.skills
+                                                                                li GML
+                                                                                li OSGeo
+                                                                                li Google Maps
+                                                                                li GeoJSON
+                                                                                li JavaScript
+                                                                                li Python
+                                                                                li AngularJS
+                                                                                li Flask
+                                                        .right &nbsp;
+                                                .block.solid
+                                                        .left &nbsp;
+                                                        .right
+                                                                .time Oct '16
+                                                                .content
+                                                                        h3
+                                                                                | Joined 
+                                                                                b Infosys
+                                                                        p 
+                                                .block
+                                                        .left
+                                                                .time Jul '17
+                                                                .content
+                                                                        h3 SpatialWeb (Prototype)
+                                                                        a(target='_blank', href='https://github.com/BzFTMxc/spatial-demo') https://github.com/BzFTMxc/spatial-demo
+                                                                        p We created a demo for client. He loved the idea. We created a demo for client. He loved the idea. We created a demo for client. He loved the idea.
+                                                        .right &nbsp;
+                                                .block
+                                                        .left &nbsp;
+                                                        .right
+                                                                .time Jul '17
+                                                                .content
+                                                                        h3 SpatialWeb (Prototype)
+                                                                        a(target='_blank', href='https://github.com/BzFTMxc/spatial-demo') https://github.com/BzFTMxc/spatial-demo
+                                                                        p We created a demo for client. He loved the idea. We created a demo for client. He loved the idea. We created a demo for client. He loved the idea.
+                                                .block
+                                                        .left
+                                                                .time Jul '17
+                                                                .content
+                                                                        h3 SpatialWeb (Prototype)
+                                                                        a(target='_blank', href='https://github.com/BzFTMxc/spatial-demo') https://github.com/BzFTMxc/spatial-demo
+                                                                        p We created a demo for client. He loved the idea. We created a demo for client. He loved the idea. We created a demo for client. He loved the idea.
+                                                        .right &nbsp;
+                                                .block
+                                                        .left &nbsp;
+                                                        .right
+                                                                .time Jul '17
+                                                                .content
+                                                                        h3 SpatialWeb (Prototype)
+                                                                        a(target='_blank', href='https://github.com/BzFTMxc/spatial-demo') https://github.com/BzFTMxc/spatial-demo
+                                                                        p We created a demo for client. He loved the idea. We created a demo for client. He loved the idea. We created a demo for client. He loved the idea.
 
                 script(type="text/javascript", src="assets/js/BzFTMxc.min.js")
