--- a/assets/css/BzFTMxc.css
+++ b/assets/css/BzFTMxc.css
@@ -3,7 +3,15 @@
  *  font-family: 'Raleway Dots', cursive;
  *  font-family: 'Raleway', sans-serif;
  **/
-* {
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul,
+li {
   padding: 0px;
   margin: 0px;
 }
@@ -31,9 +39,52 @@ body {
 .text-right {
   text-align: right;
 }
-#timeline {
-  background: linear-gradient(30deg, #539, #395);
+.skew {
+  display: inline-block;
+  transform: skew(-20deg, 0deg);
+}
+.skew .unskew {
+  display: inline-block;
+  transform: skew(20deg, 0deg);
+}
+#whoami {
+  text-align: center;
+}
+#whoami img.portrait {
+  margin: 0% 30%;
+  width: 40%;
+}
+#whoami .greeting .highlight {
+  background: #000;
   color: #FFF;
+  padding-left: 18px;
+  padding-right: 18px;
+  margin: 0px 10px;
+  font-weight: 600;
+}
+#whoami .greeting h3 {
+  font-weight: 300;
+  font-size: 3em;
+}
+#whoami .greeting h1 {
+  font-weight: 300;
+  font-size: 5em;
+}
+#whoami .highlights {
+  margin: 20px 0px;
+}
+#whoami .highlights .highlight {
+  padding: 5px 15px;
+  margin: 0px 8px;
+  background: #EEE;
+  color: #000;
+  font-weight: 400;
+  font-size: 0.9em;
+}
+#timeline {
+  background: #FFF;
+  color: #000;
+  padding-top: 50px;
 }
 .timeline {
   float: left;
@@ -44,26 +95,29 @@ body {
   top: 0%;
   left: 0%;
   width: 100%;
-  min-height: 150px;
+  height: 150px;
+}
+.timeline .block.short {
+  height: 100px;
 }
 .timeline .block::before {
   content: '';
   position: absolute;
   width: 0%;
-  height: 90%;
+  height: 88%;
   margin: 0px auto;
   top: 16px;
   left: 0;
   right: 0;
   background: none;
-  border-right: solid 2px #FFF;
+  border-right: dotted 2px #333333;
   opacity: .7;
 }
-.timeline .block.dotted::before {
-  border-right: dotted 2px #FFF;
+.timeline .block.solid::before {
+  border-right: solid 2px #333333;
 }
 .timeline .block.dashed::before {
-  border-right: dashed 2px #FFF;
+  border-right: dashed 2px #333333;
 }
 .timeline .block::after {
   content: '';
@@ -75,6 +129,90 @@ body {
   left: 0;
   right: 0;
   background: none;
-  border: solid 4px #FFF;
+  border: solid 4px #333333;
   border-radius: 50%;
+}
+.timeline .block.solid::after {
+  background: #333333;
+}
+.timeline .block .left {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 47%;
+  padding-right: 3%;
+  text-align: right;
+}
+.timeline .block .left .time {
+  text-align: right;
+}
+.timeline .block .left .image img {
+  float: right;
+}
+.timeline .block .left .content {
+  text-align: right;
+}
+.timeline .block .left .content ul.skills li {
+  float: right;
+}
+.timeline .block .right {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 47%;
+  padding-left: 3%;
+  text-align: left;
+}
+.timeline .block .right .time {
+  text-align: left;
+}
+.timeline .block .right .image img {
+  float: left;
+}
+.timeline .block .right .content {
+  text-align: left;
+}
+.timeline .block .right .content ul.skills li {
+  float: left;
+}
+.timeline .block .time {
+  float: left;
+  width: 100%;
+  margin-bottom: 10px;
+  font-weight: 600;
+  font-style: italic;
+}
+.timeline .block .content {
+  float: left;
+  width: 100%;
+  font-size: 0.95em;
+}
+.timeline .block .content h3 {
+  font-weight: 300;
+  font-style: italic;
+}
+.timeline .block .content a {
+  font-size: 10pt;
+  color: #808080;
+  text-decoration: none;
+}
+.timeline .block .content a:hover {
+  color: #333333;
+  text-decoration: underline;
+}
+.timeline .block .content p {
+  margin: 10px 0px;
+  color: #4d4d4d;
+}
+.timeline .block .content ul.skills {
+  float: left;
+  width: 100%;
+  list-style: none;
+}
+.timeline .block .content ul.skills li {
+  font-weight: 300;
+  font-size: 0.8em;
+  padding: 3px 8px;
+  margin: 3px 5px;
+  background: #EEE;
 }
