--- a/src/less/BzFTMxc.less
+++ b/src/less/BzFTMxc.less
@@ -220,6 +220,11 @@ html, body{
 		font-style: italic;
 	    }
 
+	    strong {
+		font-weight: 300;
+		display: block;
+	    }
+
 	    a{
 		font-size: 10pt;
 		color: lighten(@text, 50%);
