--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -34,9 +34,9 @@ html
                                                         .left
                                                                 .time Aug '17
                                                                 .content
-                                                                        h3 SpatialWeb (Prototype)
+                                                                        h3 PNIMaps (Prototype)
                                                                         a(target='_blank', href='https://github.com/BzFTMxc/spatial-demo') https://github.com/BzFTMxc/spatial-demo
-                                                                        p Physical network inventory management and network analysis through Google Maps based interface. Developed a prototype to demonstrate how javascript can be used to render and manipulate spatial data directly on map.
+                                                                        p Physical network inventory management and network analysis through Google Maps based interface. Developed a prototype to demonstrate how javascript can be used to render spatial data and manipulate directly on map.
                                                                         ul.skills
                                                                                 li GML
                                                                                 li OSGeo
@@ -55,38 +55,103 @@ html
                                                                         h3
                                                                                 | Joined 
                                                                                 b Infosys
-                                                                        p 
+                                                                        p Being an important part; leaving XenonStack was never an option. With conflicting opinion on products and strategy; pertaining from long time; I decided to leave the team for good.
                                                 .block
                                                         .left
-                                                                .time Jul '17
+                                                                .time Aug '16
                                                                 .content
-                                                                        h3 SpatialWeb (Prototype)
-                                                                        a(target='_blank', href='https://github.com/BzFTMxc/spatial-demo') https://github.com/BzFTMxc/spatial-demo
-                                                                        p We created a demo for client. He loved the idea. We created a demo for client. He loved the idea. We created a demo for client. He loved the idea.
+                                                                        h3 Nexify StoreBiz
+                                                                        strong Dynamic pricing for storage business
+                                                                        a(target='_blank', href='https://gust.com/companies/srp-systems-inc') https://gust.com/companies/srp-systems-inc
+                                                                        p Worked with SRP Systems team to build dynamic pricing model for storage business. Lead the team as a technology partner for implementation of solution designed by Dr. Raju Penmatcha; founder of SRP Systems and a great data scientist.
+                                                                        ul.skills
+                                                                                li RabbitMQ
+                                                                                li Python
+                                                                                li Spark
+                                                                                li Angular.js
+                                                                                li D3.js
+                                                                                li Neo4J
+                                                                                li Google Maps
+                                                                                li Cypher Query
                                                         .right &nbsp;
                                                 .block
                                                         .left &nbsp;
                                                         .right
-                                                                .time Jul '17
+                                                                .time Mar '16
                                                                 .content
-                                                                        h3 SpatialWeb (Prototype)
-                                                                        a(target='_blank', href='https://github.com/BzFTMxc/spatial-demo') https://github.com/BzFTMxc/spatial-demo
-                                                                        p We created a demo for client. He loved the idea. We created a demo for client. He loved the idea. We created a demo for client. He loved the idea.
+                                                                        h3 SmartC - Infinilytics
+                                                                        strong Insurance fraud detection solution
+                                                                        a(target='_blank', href='https://www.infinilytics.com/illustrations/') https://www.infinilytics.com/smartc/
+                                                                        p Technology partnership with Infinilytics; developers of patented solution for insurance fraud detection. Lead the offshore development and successfully served two clients for Infinilytics. Deployed and maintained HIPAA compliant infrastructure at workplace.
+                                                                        ul.skills
+                                                                                li Titan Graph
+                                                                                li Gremlin
+                                                                                li Groovy
+                                                                                li Spark
+                                                                                li SolR
+                                                                                li Python
+                                                                                li Hadoop
+                                                                                li D3.js
+                                                                                li A2iA
+                                                                                li HBase
+                                                                                li Scrapy
+                                                                                li Nutch
                                                 .block
                                                         .left
-                                                                .time Jul '17
+                                                                .time Nov '15
                                                                 .content
-                                                                        h3 SpatialWeb (Prototype)
-                                                                        a(target='_blank', href='https://github.com/BzFTMxc/spatial-demo') https://github.com/BzFTMxc/spatial-demo
-                                                                        p We created a demo for client. He loved the idea. We created a demo for client. He loved the idea. We created a demo for client. He loved the idea.
+                                                                        h3 Xenonify - IoT Platform
+                                                                        a(target='_blank', href='https://xenonify.com') https://xenonify.com
+                                                                        p As our team grew; we looked for opportunities within our market. We developed an IoT SaaS platform specifically to serve the upcoming needs of our clients. I played an important role in architecture and implementation of the solution. Successfully served client; working for efficient power utilization.
+                                                                        ul.skills
+                                                                                li Python
+                                                                                li Angular.js
+                                                                                li Golang
+                                                                                li C
+                                                                                li MongoDB
+                                                                                li Elasticsearch
+                                                                                li RabbitMQ
+                                                                                li D3.js
+                                                                                li Spark
                                                         .right &nbsp;
                                                 .block
                                                         .left &nbsp;
                                                         .right
-                                                                .time Jul '17
+                                                                .time Jul '15
                                                                 .content
-                                                                        h3 SpatialWeb (Prototype)
-                                                                        a(target='_blank', href='https://github.com/BzFTMxc/spatial-demo') https://github.com/BzFTMxc/spatial-demo
-                                                                        p We created a demo for client. He loved the idea. We created a demo for client. He loved the idea. We created a demo for client. He loved the idea.
+                                                                        h3 RayCare Profiler
+                                                                        strong Health profiler for healthcare platform RayCare
+                                                                        a(target='_blank', href='http://raycare.co/') http://raycare.co
+                                                                        p An in-house initiative for healthcare grew into a SaaS platform. I worked on healthcare profiler for the platform; which allowed users to keep track of their body vitals, medical reports and diet information. We utilized available technologies to automate OCR and digitize medical reports.
+                                                                        ul.skills
+                                                                                li Python
+                                                                                li Hadoop
+                                                                                li Hue
+                                                                                li HBase
+                                                                                li MongoDB
+                                                                                li OpenCV
+                                                                                li Angular.js
+                                                                                li Spark
+                                                                                li Scala
+                                                                                li Flask
+                                                .block.solid
+                                                        .left
+                                                                .time Aug '14
+                                                                .content
+                                                                        h3
+                                                                                | Co-founded 
+                                                                                b XenonStack
+                                                                        a(target='_blank', href='https://xenonstack.com') https://xenonstack.com
+                                                                        p As I demonstrated proficient develoment skills; I got pulled to a new setup for big data and cloud slolution consulting. We collaborated to serve our first client; a telecom provider for analysing call data records in real-time and optimize billing components. Later, I lead the team as CTO and architect for big data solutions.
+                                                        .right &nbsp;
+                                                .block.dashed
+                                                        .left &nbsp;
+                                                        .right
+                                                                .time Oct '12
+                                                                .content
+                                                                        h3
+                                                                                b Freelance 
+                                                                                | Developer
+                                                                        p I had an interesting life as a freelance developer. I started by exploring technologies of the time and working for free at early stage. Finally got my first paid project in 2012. With excellent repeat hire rate; I developed several ERP solutions and online versions for various magazines and newspapers.
 
                 script(type="text/javascript", src="assets/js/BzFTMxc.min.js")
