--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -23,20 +23,33 @@ html
                                                         span.unskew software architect
                                                 span.highlight.skew
                                                         span.unskew data engineer
+                                        .links
+                                                a(href='https://github.com/BzFTMxc')
+                                                        img(src='assets/img/github.png')
+                                                        | https://github.com/BzFTMxc
+                                                a(href='https://BzFTMxc.github.io')
+                                                        img(src='assets/img/web.png')
+                                                        | https://BzFTMxc.github.io
+                                                a(href='https://github.com/BzFTMxc')
+                                                        img(src='assets/img/github.png')
+                                                        | https://github.com/BzFTMxc
 
                                 section#timeline.wrapper
                                         .timeline
                                                 .block.dashed.short
                                                         .left
                                                                 .time Today
-                                                        .right I want to join your team.
+                                                        .right
+                                                                | I want to join your team.
+                                                                .content
+                                                                        p ---
                                                 .block
                                                         .left
                                                                 .time Aug '17
                                                                 .content
                                                                         h3 PNIMaps (Prototype)
                                                                         a(target='_blank', href='https://github.com/BzFTMxc/spatial-demo') https://github.com/BzFTMxc/spatial-demo
-                                                                        p Physical network inventory management and network analysis through Google Maps based interface. Developed a prototype to demonstrate how javascript can be used to render spatial data and manipulate directly on map.
+                                                                        p Physical network inventory management and network analysis through Google Maps based interface. Developed a prototype to demonstrate how javascript can be used to render spatial data and manipulate directly on map. Implementation of proposed solution could reduce the usage proprietary softwares by a large part of team and hence, can save considerable cost of licensing.
                                                                         ul.skills
                                                                                 li GML
                                                                                 li OSGeo
@@ -56,6 +69,7 @@ html
                                                                                 | Joined 
                                                                                 b Infosys
                                                                         p Being an important part; leaving XenonStack was never an option. With conflicting opinion on products and strategy; pertaining from long time; I decided to leave the team for good.
+                                                                        p With a campus placement offer letter (from the past) still available at the time; I called HR at Infosys to get myself placed in the team.
                                                 .block
                                                         .left
                                                                 .time Aug '16
@@ -82,7 +96,7 @@ html
                                                                         h3 SmartC - Infinilytics
                                                                         strong Insurance fraud detection solution
                                                                         a(target='_blank', href='https://www.infinilytics.com/illustrations/') https://www.infinilytics.com/smartc/
-                                                                        p Technology partnership with Infinilytics; developers of patented solution for insurance fraud detection. Lead the offshore development and successfully served two clients for Infinilytics. Deployed and maintained HIPAA compliant infrastructure at workplace.
+                                                                        p Technology partnership with Infinilytics; developers of patented solution for insurance fraud detection. Lead the offshore development and successfully served two clients for Infinilytics. Also; deployed and maintained HIPAA compliant infrastructure at workplace.
                                                                         ul.skills
                                                                                 li Titan Graph
                                                                                 li Gremlin
