--- a/assets/css/BzFTMxc.css
+++ b/assets/css/BzFTMxc.css
@@ -51,8 +51,8 @@ body {
   text-align: center;
 }
 #whoami img.portrait {
-  margin: 0% 30%;
-  width: 40%;
+  margin: 0% 35%;
+  width: 30%;
 }
 #whoami .greeting .highlight {
   background: #000;
@@ -64,11 +64,11 @@ body {
 }
 #whoami .greeting h3 {
   font-weight: 300;
-  font-size: 3em;
+  font-size: 2em;
 }
 #whoami .greeting h1 {
   font-weight: 300;
-  font-size: 5em;
+  font-size: 4em;
 }
 #whoami .highlights {
   margin: 20px 0px;
@@ -80,6 +80,24 @@ body {
   color: #000;
   font-weight: 400;
   font-size: 0.9em;
+}
+#whoami .links {
+  margin: 10px 0px;
+}
+#whoami .links a {
+  font-size: 0.75em;
+  line-height: 20px;
+  text-decoration: none;
+  color: #666666;
+  margin: 0px 10px;
+}
+#whoami .links a img {
+  height: 20px;
+  margin-right: 5px;
+}
+#whoami .links a:hover {
+  color: #000;
+  text-decoration: underline;
 }
 #timeline {
   background: #FFF;
@@ -95,7 +113,7 @@ body {
   top: 0%;
   left: 0%;
   width: 100%;
-  height: 150px;
+  height: 170px;
 }
 .timeline .block.short {
   height: 100px;
@@ -104,7 +122,7 @@ body {
   content: '';
   position: absolute;
   width: 0%;
-  height: 88%;
+  height: 90%;
   margin: 0px auto;
   top: 16px;
   left: 0;
