--- a/src/less/BzFTMxc.less
+++ b/src/less/BzFTMxc.less
@@ -48,8 +48,8 @@ html, body{
     text-align: center;
 
     img.portrait{
-	margin: 0% 30%;
-	width: 40%;
+	margin: 0% 35%;
+	width: 30%;
     }
 
     .greeting{
@@ -65,12 +65,12 @@ html, body{
 	
 	h3{
 	    font-weight: 300;
-	    font-size: 3em;
+	    font-size: 2em;
 	}
 	
 	h1{
 	    font-weight: 300;
-	    font-size: 5em;
+	    font-size: 4em;
 	}
 	
     }
@@ -86,6 +86,28 @@ html, body{
 	    color: #000;
 	    font-weight: 400;
 	    font-size: 0.9em;
+	}
+    }
+
+    .links{
+	margin: 10px 0px;
+	
+	a{
+	    font-size: 0.75em;
+	    line-height: 20px;
+	    text-decoration: none;
+	    color: lighten(@text, 40%);
+	    margin: 0px 10px;
+
+	    img{
+		height: 20px;
+		margin-right: 5px;
+	    }
+
+	    &:hover{
+		color: @text;
+		text-decoration: underline;
+	    }
 	}
     }
     
@@ -107,7 +129,7 @@ html, body{
 	top: 0%;
 	left: 0%;
 	width: 100%;
-	height: 150px;
+	height: 170px;
 
 	&.short{
 	    height: 100px;
@@ -117,7 +139,7 @@ html, body{
 	    content: '';
 	    position: absolute;
 	    width: 0%;
-	    height: 88%;
+	    height: 90%;
 	    margin: 0px auto;
 	    top: 16px;
 	    left: 0;
